@@ -61,6 +61,7 @@
 	* Fixed bug #16975: htmlArea RTE: Use parentNode rather than parentElement
 	* Follow-up to bug #17157: htmlArea RTE: Not enabled in various browser/system combinations
 	* Fixed bug #17187: CSH tooltip does not render correctly for allowed Excludefields
+	* Fixed bug #17160: htmlArea RTE: Link editing problems in Internet Explorer
 
 2011-01-21  Susanne Moog  <typo3@susanne-moog.de>
 
